--- a/.github/workflows/download-database.yaml
+++ b/.github/workflows/download-database.yaml
@@ -17,6 +17,9 @@ jobs:
 
       - name: Install packages
         uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::janitor
 
       - name: Download ECoF
         run: Rscript -e 'source("download_ECoF.R")'
