--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -34,4 +34,4 @@ jobs:
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git commit README.md -m 'Re-build README' || echo "No changes to commit"
-          git push origin main || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
