--- a/.github/workflows/download-database.yaml
+++ b/.github/workflows/download-database.yaml
@@ -9,10 +9,12 @@ jobs:
   download-ECoF:
     runs-on: ubuntu-latest
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_PAT: ${{ secrets.PAT }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
